--- a/SpeedMaster.xcodeproj/xcshareddata/xcschemes/SpeedMaster.xcscheme
+++ b/SpeedMaster.xcodeproj/xcshareddata/xcschemes/SpeedMaster.xcscheme
@@ -50,6 +50,12 @@
             ReferencedContainer = "container:SpeedMaster.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
